Added basket field to transaction request and updated README docs

--- a/PCEFTPOS.WebAPI.PosCloudAPITest.RazorPages.Async/appsettings.json
+++ b/PCEFTPOS.WebAPI.PosCloudAPITest.RazorPages.Async/appsettings.json
@@ -8,9 +8,10 @@
   "AppSettings": {
     "tokenServer": "https://pceftpos-authenticationservice-sandbox.azurewebsites.net/v1/",
     "server": "https://poscloudapisandbox.azurewebsites.net/v1/",
-    "posName": "Test POS",
-    "posVersion": "1.0",
-    "notificationUri": "<YOUR POS SERVER API URI>/pceftposnotify/{{session}}/{{type}}",
+    "posName": "<YOUR POS NAME>",
+    "posVersion": "<YOUR POS VERSION>",
+    "posId": "<UNIQUE UUID THAT IDENTIFIES YOUR POS>",
+    "notificationUri": "<YOUR POS SERVER API URI>/pceftposnotify/{{sessionid}}/{{type}}",
     "merchant": "00",
     "application": "00",
     "pinpadUsername": "<YOUR PINPAD USERNAME>",
@@ -18,3 +19,4 @@
     "pinpadPairCode": "<YOUR PINPAD PAIRING CODE>"
   }
 }
+
